v 1.1.0
----------
* Added Labels to Rune Slot Buttons, and Option to disable or resize their text


v 1.0.9
----------
* Removed extra Shadowstep entry incorrectly in Legs Slot


v 1.0.8
----------
* Now automatically dismounts when trying to change runes while mounted, rather than giving an error (unless moving or in combat)


v 1.0.7
----------
* Change default for notification when swapping to engraved gear


v 1.0.6
----------
* Fix Lua error when Updating existing Rune Set


v 1.0.5
----------
* Fixes for Rune Sets giving errors when updating/deleting sets
* Minor text adjustments


v 1.0.4
----------
* Fix for Rune Sets option not saving consistently
* Minor cleanup


v 1.0.3
----------
* Fix for performance issue caused by extra calls and amplified by API changes in 1.15.1 


v 1.0.2
----------
* Fix to hide/remove some QoL Books/Scrolls that are in the data files/API as Runes (Shadowfiend and Aspect of the Viper)
NOTE: If you notice any others like this that are displaying as runes that should not be, please let me know.


v 1.0.1
----------
* Fix for error on load with Ace-3/Localization if not using any other addons with Ace-3


v 1.0.0
----------
* Update for Patch 1.15.1 (SoD Phase 2)


0.7.7.6
----------
* minor settings adjustments for consistency


0.7.7.5
----------
* Preparation for future phases (New slots/runes are now ready and will be working immediately for Phase 2 launch) 
* (Runes Widget) Added options to Show/Hide each rune slot individually
* (Runes Widget) Added option to Show/Hide Rune Slots that haven't been discovered yet (defaults to hide, and they will show when you find a rune in that category)
* Removed option to toggle notifications per slot - with the other settings the individual slot notification options are redundant/unnecessary


0.7.7.4
----------
* Added option to hide individual slots from the Runes Widget
* Phase 2 prep 


0.7.7.3
----------